--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/suits-at/workflows.git"
   },
   "author": "Sebastian Ulbel",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
     "gulp-util": "^3.0.7"
   }
 }
