--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
