--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gulp-connect": "^2.3.1",
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jsonminify": "^1.0.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "imagemin-pngquant": "^4.2.0",
     "jquery": "^2.1.4",
     "mustache": "^2.2.1"
   }
